# tezweb

./: Cargo.toml  README.md  cert.pem  fix.py  key.pem
actix-bench/: Cargo.toml
actix-bench/src/: main.rs
benches/: against_actix.rs
certs/: cert.pem  key.pem
docs/: auth.md  benchmarks.md  deployment.md  getting-started.md  graphql.md  internals.md  middleware.md  proxy.md  routing.md  websocket.md
examples/: backend_server.rs  extractor_demo.rs  file_server.rs  form_test.rs  graphql_test.rs  hello_world.rs  http3_client.r  http3_client.rs  http3_server.rs  jwt_test.rs  proxy_test.rs  rest_api.rs  sse_test.rs  static_test.rs  unified_server.rs  websocket_chat.rs
public/: app.js  index.html
src/: lib.rs  lib.rs.bak
src/auth/: mod.rs
src/common/: cache_control.rs  config.rs  cookie.rs  error.rs  header.rs  health.rs  mod.rs  request_id.rs  session.rs  shutdown.rs  static_files.rs  status.rs
src/extractors/: mod.rs
src/graphql/: mod.rs
src/http/: mod.rs
src/http/common/: mod.rs
src/http/h1/: method.rs  mod.rs  parser.rs  writer.rs
src/http/h3/: mod.rs
src/io/: buffer.rs  event.rs  mod.rs  socket.rs  tcp.rs
src/memory/: bump.rs  cache_line.rs  mod.rs  pool.rs
src/middleware/: body_limit.rs  compression.rs  mod.rs  rate_limit.rs  timeout.rs
src/proxy/: mod.rs
src/reload/: mod.rs
src/router/: mod.rs  trie.rs
src/server/: mod.rs  unified.rs  unified.rs.bak
src/sse/: mod.rs
src/tls/: config.rs  mod.rs
src/upload/: mod.rs
src/ws/: frame.rs  handshake.rs  mod.rs
tests/: integration_tests.rs  router_tests.rs
